* Added parts of the french translation

--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -304,4 +304,78 @@
 		<label index="headlet.about.label">О todoyu</label>
 		<label index="unknown">неизвестно</label>
 	</labels>
+	<labels lang="fr_FR">
+		<label index="tab.todoyu.label">todoyu</label>
+		<label index="yes">Oui</label>
+		<label index="no">Non</label>
+		<label index="loading">Chargement</label>
+		<label index="expandall">Tout montrer</label>
+		<label index="author">Auteur</label>
+		<label index="title">Titre</label>
+		<label index="description">Description</label>
+		<label index="date">Date</label>
+		<label index="dateFormat">aa.mm.jj</label>
+		<label index="quickcreate.title">Créer</label>
+		<label index="quickcreate.alltypes.label">ATous les types:</label>
+		<label index="create">Créer</label>
+		<label index="createNew">Créer un nouveau</label>
+		<label index="edit">Éditer</label>
+		<label index="load">Ouvrir</label>
+		<label index="save">Sauvegarder</label>
+		<label index="cancel">Annuler</label>
+		<label index="delete">Effacer</label>
+		<label index="deleteRecord">Effacer l'enregistrement</label>
+		<label index="show">Montrer</label>
+		<label index="hide">Cacher</label>
+		<label index="unhide">montrer</label>
+		<label index="rename">Renommer</label>
+		<label index="reset">Remettre à zéro</label>
+		<label index="update">Mettre à jour</label>
+		<label index="search">Rechercher</label>
+		<label index="back">Retour</label>
+		<label index="filter">Filtrer</label>
+		<label index="type">Type</label>
+		<label index="record">Enregistrement</label>
+		<label index="records">Enregistrements</label>
+		<label index="components">Composantes</label>
+		<label index="status">État</label>
+		<label index="what">Quoi</label>
+		<label index="where">Où</label>
+		<label index="when">Quand</label>
+		<label index="until">jusqu'à</label>
+		<label index="private">Privé</label>
+		<label index="start">Début</label>
+		<label index="stop">Arrêter</label>
+		<label index="end">Fin</label>
+		<label index="beginning">Débutant</label>
+		<label index="deadline">Échéancier</label>
+		<label index="closeWindow">Fermer la fenêtre</label>
+		<label index="noAccess.errorMessage">Vous n'avez pas accès à cette information</label>
+		<label index="close">Fermer</label>
+		<label index="noAccess.pageTitle">Aucun accès</label>
+		<label index="noAccess.goBackToLastPage">Aller à la dernière page</label>
+		<label index="noAccess.contactAdmin">Si vous croyez que vous devriez avoir accès, communiquez cette information à votre administrateur todoyu :</label>
+		<label index="noAccess.requestURL">URL demandé</label>
+		<label index="noAccess.missingRight">Droit manquant</label>
+		<label index="footer.version">Version</label>
+		<label index="footer.bugreport">Soumettre un problème</label>
+		<label index="footer.bugreport.title">Utilisez le système de suivi de bogues todoyu pour soumettre un rapport</label>
+		<label index="footer.forum">Discutez dans le forum</label>
+		<label index="footer.forum.title">Trouvez de l'aide ou partagez vos idées</label>
+		<label index="footer.usermanual">Manuel</label>
+		<label index="footer.usermanual.title">Manuel des utilisateurs</label>
+		<label index="footer.api">API</label>
+		<label index="footer.api.title">Documentation des API en Doxygen</label>
+		<label index="footer.devmanual">Dev</label>
+		<label index="footer.devmanual.title">Manuel pour les développeurs</label>
+		<label index="paging.page">Page</label>
+		<label index="input.autocompleter">Saisie auto-complètée</label>
+		<label index="ajax.requestFailed">Connexion au serveur  impossible (connexion ou serveur en problème?)</label>
+		<label index="roles">Rôles</label>
+		<label index="role">Rôle</label>
+		<label index="role.new">Nouveau Rôle</label>
+		<label index="role.attr.active">Actif</label>
+		<label index="role.attr.persons">Membres de rôle</label>
+		<label index="headlet.ajaxloader.label">Synchronisation avec le serveur Web</label>
+	</labels>
 </locallang>
