--- a/core/locale/static_territory.xml
+++ b/core/locale/static_territory.xml
@@ -61,4 +61,6 @@
 		<label index="num61.name">Polynesien</label>
 	</labels>
 	<labels lang="pt_BR"></labels>
+	<labels lang="ru_RU"></labels>
+	<labels lang="fr_FR"></labels>
 </locallang>
