* Made context menu larger to serve all translations * Removed project dev-icons * Added loader box (please wait box for long loading requests) * Added loading icon for login page

--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -75,6 +75,7 @@
 		<label index="headlet.ajaxloader.label">Synchronizing data with web server</label>
 		<label index="headlet.about.label">About todoyu</label>
 		<label index="unknown">n/a</label>
+		<label index="loaderBox.title">Will proceed in a moment</label>
 	</labels>
 	<labels lang="de_DE">
 		<label index="tab.todoyu.label">todoyu</label>
@@ -151,6 +152,7 @@
 		<label index="headlet.ajaxloader.label">Synchronisiere Daten mit dem Webserver</label>
 		<label index="headlet.about.label">Über todoyu</label>
 		<label index="unknown">unbekannt</label>
+		<label index="loaderBox.title">Gleich gehts weiter</label>
 	</labels>
 	<labels lang="pt_BR">
 		<label index="tab.todoyu.label">todoyu</label>
