* Unittests and bugfixes

--- a/core/locale/locale.xml
+++ b/core/locale/locale.xml
@@ -180,8 +180,8 @@
 	    <label index="mt_MT">Maltesisch (Malta)</label>
 	    <label index="no_NO">Norwegisch (Norway)</label>
 	    <label index="pl_PL">Polnisch (Poland)</label>
-	    <label index="pt_BR">Portugisisch (Brazil)</label>
-	    <label index="pt_PT">Portugisisch (Portugal)</label>
+	    <label index="pt_BR">Portugiesisch (Brazil)</label>
+	    <label index="pt_PT">Portugiesisch (Portugal)</label>
 	    <label index="ro_RO">Rumänisch (Romania)</label>
 	    <label index="ru_RU">Russisch (Russia)</label>
 	    <label index="sr_BA">Serbisch (Bosnia and Herzegovina)</label>
