* Added dutch (nl_NL) translation

--- a/core/locale/locale.xml
+++ b/core/locale/locale.xml
@@ -432,4 +432,112 @@
 	    <label index="uk_UA">Украинский (Украина)</label>
 	    <label index="vi_VN">Виетнамский (Виетнам)</label>
 	</labels>
+	<labels lang="nl_NL">
+		<label index="sq_AL">Albaans (Albanië)</label>
+	    <label index="ar_DZ">Arabisch (Algerije)</label>
+	    <label index="ar_BH">Arabisch (Bahrein)</label>
+	    <label index="ar_EG">Arabisch (Egypte)</label>
+	    <label index="ar_IQ">Arabisch (Iraq)</label>
+	    <label index="ar_JO">Arabisch (Jordanië)</label>
+	    <label index="ar_KW">Arabisch (Kuweit)</label>
+	    <label index="ar_LB">Arabisch (Libanon)</label>
+	    <label index="ar_LY">Arabisch (Libië)</label>
+	    <label index="ar_MA">Arabisch (Marokko)</label>
+	    <label index="ar_OM">Arabisch (Oman)</label>
+	    <label index="ar_QA">Arabisch (Qatar)</label>
+	    <label index="ar_SA">Arabisch (Saoedi-Arabië)</label>
+	    <label index="ar_SD">Arabisch (Sudan)</label>
+	    <label index="ar_SY">Arabisch (Syrië)</label>
+	    <label index="ar_TN">Arabisch (Tunesië)</label>
+	    <label index="ar_AE">Arabisch (Verenigde Arabische Emiraten)</label>
+	    <label index="ar_YE">Arabisch (Yemen)</label>
+	    <label index="be_BY">Wit-Russisch (Wit-Rusland)</label>
+	    <label index="bg_BG">Bulgaars (Bulgarije)</label>
+	    <label index="ca_ES">Catalaans (Spanje)</label>
+	    <label index="zh_CN">Chinees (China)</label>
+	    <label index="zh_HK">Chinees (Hong Kong)</label>
+	    <label index="zh_SG">Chinees (Singapore)</label>
+	    <label index="zh_TW">Chinees (Taiwan)</label>
+	    <label index="hr_HR">Kroatisch (Kroatië)</label>
+	    <label index="cs_CZ">Tsjechisch (Tsjechië)</label>
+	    <label index="da_DK">Deens (Denemarken)</label>
+	    <label index="nl_BE">Nederlands (België)</label>
+	    <label index="nl_NL">Nederlands (Nederland)</label>
+	    <label index="en_AU">Engels (Australië)</label>
+	    <label index="en_CA">Engels (Canada)</label>
+	    <label index="en_IN">Engels (India)</label>
+	    <label index="en_IE">Engels (Ierland)</label>
+	    <label index="en_MT">Engels (Malta)</label>
+	    <label index="en_NZ">Engels (Nieuw-Zeeland)</label>
+	    <label index="en_PH">Engels (Philippijnen)</label>
+	    <label index="en_SG">Engels (Singapore)</label>
+	    <label index="en_ZA">Engels (Zuid-Afrika)</label>
+	    <label index="en_GB">Engels (Verenigd Koninkrijk)</label>
+	    <label index="en_US">Engels (Verenigde Staten)</label>
+	    <label index="et_EE">Ests (Estland)</label>
+	    <label index="fi_FI">Fins (Finland)</label>
+	    <label index="fr_BE">Frans (België)</label>
+	    <label index="fr_CA">Frans (Canada)</label>
+	    <label index="fr_FR">Frans (Frankrijk)</label>
+	    <label index="fr_LU">Frans (Luxemburg)</label>
+	    <label index="fr_CH">Frans (Zwitserland)</label>
+	    <label index="de_AT">Duits (Oostenrijk)</label>
+	    <label index="de_DE">Duits (Duitsland)</label>
+	    <label index="de_LU">Duits (Luxemburg)</label>
+	    <label index="de_CH">Duits (Zwitserland)</label>
+	    <label index="el_CY">Grieks (Cyprus)</label>
+	    <label index="el_GR">Grieks (Griekenland)</label>
+	    <label index="iw_IL">Hebreeuws (Israël)</label>
+	    <label index="hi_IN">Hindi (India)</label>
+	    <label index="hu_HU">Hongaars (Hongarije)</label>
+	    <label index="is_IS">IJslands (IJsland)</label>
+	    <label index="in_ID">Indonesisch (Indonesië)</label>
+	    <label index="ga_IE">Iers (Ierland)</label>
+	    <label index="it_IT">Italiaans (Italië)</label>
+	    <label index="it_CH">Italiaans (Zwitserland)</label>
+	    <label index="ja_JP">Japans (Japan)</label>
+	    <label index="ko_KR">Koreaans (Zuid-Korea)</label>
+	    <label index="lv_LV">Lets (Letland)</label>
+	    <label index="lt_LT">Litouws (Litouwen)</label>
+	    <label index="mk_MK">Macedonisch (Macedonië)</label>
+	    <label index="ms_MY">Maleis (Maleisië)</label>
+	    <label index="mt_MT">Maltees (Malta)</label>
+	    <label index="no_NO">Noors (Noorwegen)</label>
+	    <label index="pl_PL">Pools (Polen)</label>
+	    <label index="pt_BR">Portugees (Brazilë)</label>
+	    <label index="pt_PT">Portugees (Portugal)</label>
+	    <label index="ro_RO">Roemeens (Roemenië)</label>
+	    <label index="ru_RU">Russisch (Rusland)</label>
+	    <label index="sr_BA">Servisch (Bosnië Herzegovina)</label>
+	    <label index="sr_ME">Servisch (Montenegro)</label>
+	    <label index="sr_CS">Servisch (Servië en Montenegro)</label>
+	    <label index="sr_RS">Servisch (Servië)</label>
+	    <label index="sk_SK">Slowaaks (Slowakije)</label>
+	    <label index="sl_SI">Sloveens (Slovenië)</label>
+	    <label index="es_AR">Spaans (Argentinië)</label>
+	    <label index="es_BO">Spaans (Bolivia)</label>
+	    <label index="es_CL">Spaans (Chili)</label>
+	    <label index="es_CO">Spaans (Colombia)</label>
+	    <label index="es_CR">Spaans (Costa Rica)</label>
+	    <label index="es_DO">Spaans (Dominicaanse Republiek)</label>
+	    <label index="es_EC">Spaans (Ecuador)</label>
+	    <label index="es_SV">Spaans (El Salvador)</label>
+	    <label index="es_GT">Spaans (Guatemala)</label>
+	    <label index="es_HN">Spaans (Honduras)</label>
+	    <label index="es_MX">Spaans (Mexico)</label>
+	    <label index="es_NI">Spaans (Nicaragua)</label>
+	    <label index="es_PA">Spaans (Panama)</label>
+	    <label index="es_PY">Spaans (Paraguay)</label>
+	    <label index="es_PE">Spaans (Peru)</label>
+	    <label index="es_PR">Spaans (Puerto Rico)</label>
+	    <label index="es_ES">Spaans (Spanje)</label>
+	    <label index="es_US">Spaans (Verenigde Staten)</label>
+	    <label index="es_UY">Spaans (Uruguay)</label>
+	    <label index="es_VE">Spaans (Venezuela)</label>
+	    <label index="sv_SE">Zweeds (Zweden)</label>
+	    <label index="th_TH">Thais (Thailand)</label>
+	    <label index="tr_TR">Turks (Turkije)</label>
+	    <label index="uk_UA">Oekraiens (Ukraïne)</label>
+	    <label index="vi_VN">Vietnamees (Vietnam)</label>
+	</labels>
 </locallang>
