--- a/core/locale/file.xml
+++ b/core/locale/file.xml
@@ -50,4 +50,14 @@
 		<label index="filename">Nom du fichier</label>
 		<label index="filesize">Taille</label>
 	</labels>
+	<labels lang="nl_NL">
+		<label index="download">Downloaden</label>
+		<label index="upload">Uploaden</label>
+		<label index="size.gb">GB</label>
+		<label index="size.mb">MB</label>
+		<label index="size.kb">KB</label>
+		<label index="size.b">B</label>
+		<label index="filename">Bestandsnaam</label>
+		<label index="filesize">Bestandsgrootte</label>
+	</labels>
 </locallang>
