--- a/core/locale/static_language.xml
+++ b/core/locale/static_language.xml
@@ -207,4 +207,190 @@
 		<label index="ru">Russe</label>
 		<label index="fr">Français</label>
 	</labels>
+	<labels lang="nl_NL">
+		<label index="aa">Afar</label>
+		<label index="ab">Abkhazian</label>
+		<label index="ae">Avestan</label>
+		<label index="af">Afrikaans</label>
+		<label index="ak">Akan</label>
+		<label index="am">Amharic</label>
+		<label index="an">Aragonees</label>
+		<label index="ar">Arabisch</label>
+		<label index="as">Assamees</label>
+		<label index="av">Avarisch</label>
+		<label index="ay">Aymara</label>
+		<label index="az">Azerbaijani</label>
+		<label index="ba">Bashkir</label>
+		<label index="be">Wit-Russisch</label>
+		<label index="bg">Bulgaars</label>
+		<label index="bh">Bihari talen</label>
+		<label index="bi">Bislama</label>
+		<label index="bm">Bambara</label>
+		<label index="bn">Bengali</label>
+		<label index="bo">Tibetaans</label>
+		<label index="br">Bretons</label>
+		<label index="bs">Bosnisch</label>
+		<label index="ca">Catalaans</label>
+		<label index="ce">Chechen</label>
+		<label index="ch">Chamorro</label>
+		<label index="co">Corsican</label>
+		<label index="cr">Cree</label>
+		<label index="cs">Tsjechisch</label>
+		<label index="cu">Church Slavisch</label>
+		<label index="cv">Chuvash</label>
+		<label index="cy">Welsh</label>
+		<label index="da">Deens</label>
+		<label index="de">Duits</label>
+		<label index="dv">Dhivehi</label>
+		<label index="dz">Dzongkha</label>
+		<label index="ee">Ewe</label>
+		<label index="el">Grieks, Modern (1453-)</label>
+		<label index="en">Engels</label>
+		<label index="eo">Esperanto</label>
+		<label index="es">Spaans</label>
+		<label index="et">Ests</label>
+		<label index="eu">Baskisch</label>
+		<label index="fa">Perzisch</label>
+		<label index="ff">Fulah</label>
+		<label index="fi">Fins</label>
+		<label index="fj">Fijian</label>
+		<label index="fo">Faroese</label>
+		<label index="fr">Frans</label>
+		<label index="fy">Fries</label>
+		<label index="ga">Iers</label>
+		<label index="gd">Gaelic</label>
+		<label index="gl">Galician</label>
+		<label index="gn">Guarani</label>
+		<label index="gu">Gujarati</label>
+		<label index="gv">Manx</label>
+		<label index="ha">Hausa</label>
+		<label index="he">Hebreeuws</label>
+		<label index="hi">Hindi</label>
+		<label index="ho">Hiri Motu</label>
+		<label index="hr">Kroatisch</label>
+		<label index="ht">Haitian</label>
+		<label index="hu">Hongaars</label>
+		<label index="hy">Armeens</label>
+		<label index="hz">Herero</label>
+		<label index="ia">Interlingua (International Auxiliary Language Association)</label>
+		<label index="id">Indonesisch</label>
+		<label index="ie">Interlingue</label>
+		<label index="ig">Igbo</label>
+		<label index="ii">Nuosu</label>
+		<label index="ik">Inupiaq</label>
+		<label index="io">Ido</label>
+		<label index="is">IJslands</label>
+		<label index="it">Italiaans</label>
+		<label index="iu">Inuktitut</label>
+		<label index="ja">Japans</label>
+		<label index="jv">Javaans</label>
+		<label index="ka">Georgisch</label>
+		<label index="kg">Kongo</label>
+		<label index="ki">Gikuyu</label>
+		<label index="kj">Kuanyama</label>
+		<label index="kk">Kazakh</label>
+		<label index="kl">Groenlands</label>
+		<label index="km">Central Khmer</label>
+		<label index="kn">Kannada</label>
+		<label index="ko">Koreaans</label>
+		<label index="kr">Kanuri</label>
+		<label index="ks">Kashmiri</label>
+		<label index="ku">Kurdish</label>
+		<label index="kv">Komi</label>
+		<label index="kw">Cornish</label>
+		<label index="ky">Kirghiz</label>
+		<label index="la">Latijns</label>
+		<label index="lb">Luxemburgs</label>
+		<label index="lg">Ganda</label>
+		<label index="li">Limburgs</label>
+		<label index="ln">Lingala</label>
+		<label index="lo">Lao</label>
+		<label index="lt">Litouws</label>
+		<label index="lu">Luba-Katanga</label>
+		<label index="lv">Lets</label>
+		<label index="mg">Malagasy</label>
+		<label index="mh">Marshallese</label>
+		<label index="mi">Maori</label>
+		<label index="mk">Macedoniaans</label>
+		<label index="ml">Malayalam</label>
+		<label index="mn">Mongools</label>
+		<label index="mr">Marathi</label>
+		<label index="ms">Maleisisch</label>
+		<label index="mt">Maltees</label>
+		<label index="my">Burmees</label>
+		<label index="na">Nauru</label>
+		<label index="nb">Noors Bokmål</label>
+		<label index="nd">North Ndebele</label>
+		<label index="ne">Nepali</label>
+		<label index="ng">Ndonga</label>
+		<label index="nl">Nederlands</label>
+		<label index="nn">Noors Nynorsk</label>
+		<label index="no">Noors</label>
+		<label index="nr">South Ndebele</label>
+		<label index="nv">Navajo</label>
+		<label index="ny">Chewa</label>
+		<label index="oc">Occitan (post 1500)</label>
+		<label index="oj">Ojibwa</label>
+		<label index="om">Oromo</label>
+		<label index="or">Oriya</label>
+		<label index="os">Ossetian</label>
+		<label index="pa">Panjabi</label>
+		<label index="pi">Pali</label>
+		<label index="pl">Pools</label>
+		<label index="ps">Pashto</label>
+		<label index="pt">Portuguees</label>
+		<label index="qu">Quechua</label>
+		<label index="rm">Romansh</label>
+		<label index="rn">Rundi</label>
+		<label index="ro">Moldavian</label>
+		<label index="ru">Russisch</label>
+		<label index="rw">Kinyarwanda</label>
+		<label index="sa">Sanskrit</label>
+		<label index="sc">Sardinian</label>
+		<label index="sd">Sindhi</label>
+		<label index="se">Northern Sami</label>
+		<label index="sg">Sango</label>
+		<label index="si">Sinhala</label>
+		<label index="sk">Slovaaks</label>
+		<label index="sl">Sloveens</label>
+		<label index="sm">Samoan</label>
+		<label index="sn">Shona</label>
+		<label index="so">Somali</label>
+		<label index="sq">Albaans</label>
+		<label index="sr">Servisch</label>
+		<label index="ss">Swati</label>
+		<label index="st">Sotho, Southern</label>
+		<label index="su">Sundanees</label>
+		<label index="sv">Zweeds</label>
+		<label index="sw">Swahili</label>
+		<label index="ta">Tamil</label>
+		<label index="te">Telugu</label>
+		<label index="tg">Tajik</label>
+		<label index="th">Thais</label>
+		<label index="ti">Tigrinya</label>
+		<label index="tk">Turkmeens</label>
+		<label index="tl">Tagalog</label>
+		<label index="tn">Tswana</label>
+		<label index="to">Tonga (Tonga Islands)</label>
+		<label index="tr">Turks</label>
+		<label index="ts">Tsonga</label>
+		<label index="tt">Tatar</label>
+		<label index="tw">Twi</label>
+		<label index="ty">Tahitian</label>
+		<label index="ug">Uighur</label>
+		<label index="uk">Oekraïens</label>
+		<label index="ur">Urdu</label>
+		<label index="uz">Uzbek</label>
+		<label index="ve">Venda</label>
+		<label index="vi">Vietnamees</label>
+		<label index="vo">Volapük</label>
+		<label index="wa">Waals</label>
+		<label index="wo">Wolof</label>
+		<label index="xh">Xhosa</label>
+		<label index="yi">Yiddish</label>
+		<label index="yo">Yoruba</label>
+		<label index="za">Zhuang</label>
+		<label index="zh">Chinees</label>
+		<label index="zu">Zulu</label>
+	</labels>
 </locallang>
