--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -87,7 +87,7 @@
 		<label index="title">Titel</label>
 		<label index="description">Beschreibung</label>
 		<label index="date">Datum</label>
-		<label index="quickcreate.title">Neue Daten Anlegen</label>
+		<label index="quickcreate.title">Neue Daten anlegen</label>
 		<label index="quickcreate.alltypes.label">Alle Datentypen:</label>
 		<label index="dateFormat">j.n.j</label>
 		<label index="create">Erstellen</label>
