* Micky added Serbian language for core

--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -532,4 +532,81 @@
 		<label index="headlet.about.label">O todoyu</label>
 		<label index="unknown">n/a</label>
 	</labels>
+	<labels lang="sr_RS">
+		<label index="tab.todoyu.label">тодоју</label>
+		<label index="yes">Да</label>
+		<label index="no">Не</label>
+		<label index="loading">Учитавање</label>
+		<label index="expandall">Погледај све</label>
+		<label index="author">Аутор</label>
+		<label index="title">Наслов</label>
+		<label index="description">Опис</label>
+		<label index="date">Датум</label>
+		<label index="dateFormat">y.n.j</label>
+		<label index="quickcreate.title">Створити</label>
+		<label index="quickcreate.alltypes.label">Све врсте податка:</label>
+		<label index="create">Створити</label>
+		<label index="createNew">Створити ново</label>
+		<label index="edit">Уредити</label>
+		<label index="load">Учитава</label>
+		<label index="save">Сачувати</label>
+		<label index="cancel">Прекинути</label>
+		<label index="delete">Обрисати</label>
+		<label index="deleteRecord">Обриши унос</label>
+		<label index="show">Показати</label>
+		<label index="hide">Сакрити</label>
+		<label index="unhide">Одкрити</label>
+		<label index="rename">Преименовати</label>
+		<label index="reset">Ресетовати</label>
+		<label index="update">Ажурирати</label>
+		<label index="search">Претражити</label>
+		<label index="back">Назад</label>
+		<label index="filter">Филтер</label>
+		<label index="type">Тип</label>
+		<label index="record">Унос</label>
+		<label index="records">Уноси</label>
+		<label index="components">Компоненте</label>
+		<label index="status">Статус</label>
+		<label index="what">Шта</label>
+		<label index="where">Где</label>
+		<label index="when">Кад</label>
+		<label index="until">Докад</label>
+		<label index="private">Приватно</label>
+		<label index="start">Стартовати</label>
+		<label index="stop">Зауставити</label>
+		<label index="end">Крај</label>
+		<label index="beginning">Почетак</label>
+		<label index="deadline">Рок</label>
+		<label index="closeWindow">Затвори прозор</label>
+		<label index="noAccess.errorMessage">Немате приступ траженом податку</label>
+		<label index="close">Затвори</label>
+		<label index="noAccess.pageTitle">Нема приступа</label>
+		<label index="noAccess.goBackToLastPage">Врати се на последњу страницу</label>
+		<label index="noAccess.contactAdmin">Опс! Ако мислите да вам треба приступ, предајте вашем тодоју администратору следеће податке:</label>
+		<label index="noAccess.requestURL">Захтевај УРЛ</label>
+		<label index="noAccess.missingRight">Недостаје право</label>
+		<label index="footer.version">Верзија</label>
+		<label index="footer.bugreport">Јавите грешку</label>
+		<label index="footer.bugreport.title">Користите трагач грешких тодоју-а на bugs.todoyu.com да додате грешку</label>
+		<label index="footer.forum">Дискусија у форум-у</label>
+		<label index="footer.forum.title">Find help or share your ideas</label>
+		<label index="footer.usermanual">Manual</label>
+		<label index="footer.usermanual.title">Frontend User Manual</label>
+		<label index="footer.api">API</label>
+		<label index="footer.api.title">Doxygen API Documentation</label>
+		<label index="footer.devmanual">Dev</label>
+		<label index="footer.devmanual.title">Manual for developers and other smart people</label>
+		<label index="paging.page">Page</label>
+		<label index="input.autocompleter">Autocomplete Input</label>
+		<label index="ajax.requestFailed">Cannot connect to server (connection or server down?)</label>
+		<label index="attr.is_active">Active</label>
+		<label index="roles">Roles</label>
+		<label index="role">Role</label>
+		<label index="role.new">New Role</label>
+		<label index="role.attr.persons">Role Members</label>
+		<label index="headlet.ajaxloader.label">Synchronizing data with web server</label>
+		<label index="headlet.about.label">About todoyu</label>
+		<label index="unknown">n/a</label>
+		<label index="loaderBox.title">Will proceed in a moment</label>
+	</labels>
 </locallang>
