--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -576,29 +576,29 @@
 		<label index="noAccess.goBackToLastPage">Врати се на последњу страницу</label>
 		<label index="noAccess.contactAdmin">Опс! Ако мислите да вам треба приступ, предајте вашем тодоју администратору следеће податке:</label>
 		<label index="noAccess.requestURL">Захтевај УРЛ</label>
-		<label index="noAccess.missingRight">Недостаје право</label>
+		<label index="noAccess.missingRight">Недостаје вам прав</label>
 		<label index="footer.version">Верзија</label>
 		<label index="footer.bugreport">Јавите грешку</label>
 		<label index="footer.bugreport.title">Користите трагач грешких тодоју-а на bugs.todoyu.com да додате грешку</label>
 		<label index="footer.forum">Дискусија у форум-у</label>
-		<label index="footer.forum.title">Find help or share your ideas</label>
-		<label index="footer.usermanual">Manual</label>
-		<label index="footer.usermanual.title">Frontend User Manual</label>
-		<label index="footer.api">API</label>
-		<label index="footer.api.title">Doxygen API Documentation</label>
-		<label index="footer.devmanual">Dev</label>
-		<label index="footer.devmanual.title">Manual for developers and other smart people</label>
-		<label index="paging.page">Page</label>
-		<label index="input.autocompleter">Autocomplete Input</label>
-		<label index="ajax.requestFailed">Cannot connect to server (connection or server down?)</label>
-		<label index="attr.is_active">Active</label>
-		<label index="roles">Roles</label>
-		<label index="role">Role</label>
-		<label index="role.new">New Role</label>
-		<label index="role.attr.persons">Role Members</label>
-		<label index="headlet.ajaxloader.label">Synchronizing data with web server</label>
-		<label index="headlet.about.label">About todoyu</label>
-		<label index="unknown">n/a</label>
-		<label index="loaderBox.title">Will proceed in a moment</label>
+		<label index="footer.forum.title">Нађите грешку или поделите ваше идеје</label>
+		<label index="footer.usermanual">Упутство</label>
+		<label index="footer.usermanual.title">Фронтенд Приручник</label>
+		<label index="footer.api">АПИ</label>
+		<label index="footer.api.title">Докиген АПИ документација</label>
+		<label index="footer.devmanual">Дев</label>
+		<label index="footer.devmanual.title">Приручник за програмере и друге паметне особе</label>
+		<label index="paging.page">Страна</label>
+		<label index="input.autocompleter">Запамти унос</label>
+		<label index="ajax.requestFailed">Не може се повезати са сервером (Веза и сервер у функцији?)</label>
+		<label index="attr.is_active">Активно</label>
+		<label index="roles">Уллоге</label>
+		<label index="role">Улога</label>
+		<label index="role.new">Нова улога</label>
+		<label index="role.attr.persons">Члановиц улоге</label>
+		<label index="headlet.ajaxloader.label">Синхронизацију података са веб сервером</label>
+		<label index="headlet.about.label">О тодоѕу</label>
+		<label index="unknown">Нема податка</label>
+		<label index="loaderBox.title">Наставља се за тренутак</label>
 	</labels>
 </locallang>
