--- a/core/locale/date.xml
+++ b/core/locale/date.xml
@@ -364,4 +364,56 @@
 		<label index="yearly">Ročně</label>
 		<label index="today">Dnes</label>
 	</labels>
+	<labels lang="sr_RS">
+		<label index="date">Датум</label>
+		<label index="time">Време</label>
+		<label index="hrs">сати</label>
+		<label index="month.january">Јануар</label>
+		<label index="month.february">Фебруар</label>
+		<label index="month.march">Март</label>
+		<label index="month.april">Април</label>
+		<label index="month.may">Маи</label>
+		<label index="month.june">Јун</label>
+		<label index="month.july">Јул</label>
+		<label index="month.august">Аугуст</label>
+		<label index="month.september">Цептембар</label>
+		<label index="month.october">Октобар</label>
+		<label index="month.november">Новембар</label>
+		<label index="month.december">Децембар</label>
+		<label index="weekday.monday">Понедељак</label>
+		<label index="weekday.tuesday">Уторак</label>
+		<label index="weekday.wednesday">Среда</label>
+		<label index="weekday.thursday">Четвртак</label>
+		<label index="weekday.friday">Петак</label>
+		<label index="weekday.saturday">Цубота</label>
+		<label index="weekday.sunday">Недења</label>
+		<label index="weekday.mon">Пон</label>
+		<label index="weekday.tue">Уто</label>
+		<label index="weekday.wed">Сре</label>
+		<label index="weekday.thu">Чет</label>
+		<label index="weekday.fri">Пет</label>
+		<label index="weekday.sat">Суб</label>
+		<label index="weekday.sun">Нед</label>
+		<label index="time.second">Секунд</label>
+		<label index="time.seconds">Цекунди</label>
+		<label index="time.minute">Минут</label>
+		<label index="time.minutes">Минута</label>
+		<label index="time.hour">Сат</label>
+		<label index="time.hours">Сати</label>
+		<label index="day">Дан</label>
+		<label index="days">Дана</label>
+		<label index="week">Недеља</label>
+		<label index="weeks">Недеље</label>
+		<label index="month">Месец</label>
+		<label index="months">Месеци</label>
+		<label index="year">Година</label>
+		<label index="years">Године</label>
+		<label index="weeknumberAbbr">Недел</label>
+		<label index="weeknumber">Број календарска недеља</label>
+		<label index="daily">Дневно</label>
+		<label index="weekly">Седмично</label>
+		<label index="monthly">Месечно</label>
+		<label index="yearly">Годишње</label>
+		<label index="today">Данас</label>
+	</labels>
 </locallang>
