--- a/core/locale/static_country.xml
+++ b/core/locale/static_country.xml
@@ -962,4 +962,244 @@
 		<label index="PSE">Palestina</label>
 		<label index="HMD">Heardeiland en McDonaldeilanden</label>
 	</labels>
+	<labels lang="sr_RS">
+		<label index="AND">Андора</label>
+		<label index="ARE">Уједињени Арапски Емирати</label>
+		<label index="AFG">Афганистан</label>
+		<label index="ATG">Антигва и Барбуда</label>
+		<label index="AIA">Ангвила</label>
+		<label index="ALB">Албанија</label>
+		<label index="ARM">Арменија</label>
+		<label index="ANT">Холандски Антили</label>
+		<label index="AGO">Ангола</label>
+		<label index="ATA">Антарктик</label>
+		<label index="ARG">Аргентина</label>
+		<label index="ASM">Америчка Самоа</label>
+		<label index="AUT">Аустрија</label>
+		<label index="AUS">Аустралија</label>
+		<label index="ABW">Аруба</label>
+		<label index="AZE">Азербејџан</label>
+		<label index="BIH">Босна и Херцеговина</label>
+		<label index="BRB">Барбадос</label>
+		<label index="BGD">Бангладеш</label>
+		<label index="BEL">Белгија</label>
+		<label index="BFA">Буркина Фасо</label>
+		<label index="BGR">Бугарска</label>
+		<label index="BHR">Бахреин</label>
+		<label index="BDI">Бурунди</label>
+		<label index="BEN">Бенин</label>
+		<label index="BMU">Бермуди</label>
+		<label index="BRN">Брунеј</label>
+		<label index="BOL">Боливија</label>
+		<label index="BRA">Бразилија</label>
+		<label index="BHS">Бахаме</label>
+		<label index="BTN">Бутан</label>
+		<label index="BVT">Буве (острво)</label>
+		<label index="BWA">Боцвана</label>
+		<label index="BLR">Белорусија</label>
+		<label index="BLZ">Белизе</label>
+		<label index="CAN">Канада</label>
+		<label index="CCK">Кокосова острва</label>
+		<label index="COD">Демократска Република Конго</label>
+		<label index="CAF">Централноафричка  Република</label>
+		<label index="COG">Конго</label>
+		<label index="CHE">Швајцарска</label>
+		<label index="CIV">Обала Слоноваче</label>
+		<label index="COK">Кукова острва</label>
+		<label index="CHL">Чиле</label>
+		<label index="CMR">Камерун</label>
+		<label index="CHN">Кина</label>
+		<label index="COL">Колумбија</label>
+		<label index="CRI">Костарика </label>
+		<label index="CUB">Куба</label>
+		<label index="CPV">Зеленортска Острва</label>
+		<label index="CXR">Божићно Острво</label>
+		<label index="CYP">Кипар</label>
+		<label index="CZE">Чешка</label>
+		<label index="DEU">Немацка</label>
+		<label index="DJI">Чешка</label>
+		<label index="DNK">Данска</label>
+		<label index="DMA">Доминика</label>
+		<label index="DOM">Доминиканска Република</label>
+		<label index="DZA">Алжир</label>
+		<label index="ECU">Еквадор</label>
+		<label index="EST">Естонија</label>
+		<label index="EGY">Египат</label>
+		<label index="ESH">Западна Сахара</label>
+		<label index="ERI">Еритреја</label>
+		<label index="ESP">Шпанија</label>
+		<label index="ETH">Етиопија</label>
+		<label index="FIN">финска</label>
+		<label index="FJI">Фиџи</label>
+		<label index="FLK">Falklandinseln</label>
+		<label index="FSM">Mikronesien</label>
+		<label index="FRO">Faröische Inseln</label>
+		<label index="FRA">Frankreich</label>
+		<label index="GAB">Gabun</label>
+		<label index="GBR">Vereinigtes Königreich Großbritannien und Irland</label>
+		<label index="GRD">Grenada</label>
+		<label index="GEO">Georgien</label>
+		<label index="GUF">Französusch Guyana</label>
+		<label index="GHA">Ghana</label>
+		<label index="GIB">Gibraltar</label>
+		<label index="GRL">Grönland</label>
+		<label index="GMB">Gambia</label>
+		<label index="GIN">Guinea</label>
+		<label index="GLP">Guadeloupe</label>
+		<label index="GNQ">Äquatoriales Guinea</label>
+		<label index="GRC">Griechenland</label>
+		<label index="SGS">Südgeorgien und die Südlichen Sandwichinseln</label>
+		<label index="GTM">Guatemala</label>
+		<label index="GUM">Guam</label>
+		<label index="GNB">Guinea-Bissau</label>
+		<label index="GUY">Guyana</label>
+		<label index="HKG">Hong Kong S.A.R., China</label>
+		<label index="HND">Honduras</label>
+		<label index="HRV">Kroatien</label>
+		<label index="HTI">Haiti</label>
+		<label index="HUN">Ungarn</label>
+		<label index="IDN">Indonesien</label>
+		<label index="IRL">Irland</label>
+		<label index="ISR">Israel</label>
+		<label index="IND">Indien</label>
+		<label index="IOT">Britisches Territorium im Indischen Ozean</label>
+		<label index="IRQ">Irak</label>
+		<label index="IRN">Iran</label>
+		<label index="ISL">Island</label>
+		<label index="ITA">Italien</label>
+		<label index="JAM">Jamaika</label>
+		<label index="JOR">Jordanien</label>
+		<label index="JPN">Japan</label>
+		<label index="KEN">Kenia</label>
+		<label index="KGZ">Kirgisistan</label>
+		<label index="KHM">Kambodscha</label>
+		<label index="KIR">Kiribati</label>
+		<label index="COM">Komoren</label>
+		<label index="KNA">St. Kitts und Nevis</label>
+		<label index="PRK">Demokratische Volksrepublik Korea</label>
+		<label index="KOR">Republik Korea</label>
+		<label index="KWT">Kuwait</label>
+		<label index="CYM">Kaimaninseln</label>
+		<label index="KAZ">Kasachstan</label>
+		<label index="LAO">Laos</label>
+		<label index="LBN">Libanon</label>
+		<label index="LCA">St. Lucia</label>
+		<label index="LIE">Liechtenstein</label>
+		<label index="LKA">Sri Lanka</label>
+		<label index="LBR">Liberia</label>
+		<label index="LSO">Lesotho</label>
+		<label index="LTU">Litauen</label>
+		<label index="LUX">Luxemburg</label>
+		<label index="LVA">Lettland</label>
+		<label index="LBY">Libyen</label>
+		<label index="MAR">Marokko</label>
+		<label index="MCO">Monaco</label>
+		<label index="MDA">Republik Moldau</label>
+		<label index="MDG">Madagaskar</label>
+		<label index="MHL">Marshallinseln</label>
+		<label index="MKD">Mazedonien</label>
+		<label index="MLI">Mali</label>
+		<label index="MMR">Myanmar</label>
+		<label index="MNG">Mongolei</label>
+		<label index="MAC">Macau S.A.R., China</label>
+		<label index="MNP">Nördliche Marianen Inseln</label>
+		<label index="MTQ">Martinique</label>
+		<label index="MRT">Mauretanien</label>
+		<label index="MSR">Montserrat</label>
+		<label index="MLT">Malta</label>
+		<label index="MUS">Mauritius</label>
+		<label index="MDV">Malediven</label>
+		<label index="MWI">Malawi</label>
+		<label index="MEX">Mexiko</label>
+		<label index="MYS">Malaysia</label>
+		<label index="MOZ">Mosambik</label>
+		<label index="NAM">Namibia</label>
+		<label index="NCL">Neukaledonien</label>
+		<label index="NER">Niger</label>
+		<label index="NFK">Norfolkinsel</label>
+		<label index="NGA">Nigeria</label>
+		<label index="NIC">Nicaragua</label>
+		<label index="NLD">Niederlande</label>
+		<label index="NOR">Norwegen</label>
+		<label index="NPL">Nepal</label>
+		<label index="NRU">Nauru</label>
+		<label index="NIU">Niue</label>
+		<label index="NZL">Neuseeland</label>
+		<label index="OMN">Oman</label>
+		<label index="PAN">Panama</label>
+		<label index="PER">Peru</label>
+		<label index="PYF">Französisch Polynesien</label>
+		<label index="PNG">Papua-Neuguinea</label>
+		<label index="PHL">Philippinen</label>
+		<label index="PAK">Pakistan</label>
+		<label index="POL">Polen</label>
+		<label index="SPM">St. Pierre und Miquelon</label>
+		<label index="PCN">Pitcairn</label>
+		<label index="PRI">Puerto Rico</label>
+		<label index="PRT">Portugal</label>
+		<label index="PLW">Palau</label>
+		<label index="PRY">Paraguay</label>
+		<label index="QAT">Katar</label>
+		<label index="REU">Saint-Dennis</label>
+		<label index="ROM">Rumänien</label>
+		<label index="RUS">Russische Föderartion</label>
+		<label index="RWA">Ruanda</label>
+		<label index="SAU">Saudi-Arabien</label>
+		<label index="SLB">Salomonen</label>
+		<label index="SYC">Seychellen</label>
+		<label index="SDN">Sudan</label>
+		<label index="SWE">Schweden</label>
+		<label index="SGP">Singapur</label>
+		<label index="SHN">St. Helena</label>
+		<label index="SVN">Slowenien</label>
+		<label index="SJM">Svalbard und Jan Mayen</label>
+		<label index="SVK">Slowakei</label>
+		<label index="SLE">Sierra Leone</label>
+		<label index="SMR">San Marino</label>
+		<label index="SEN">Senegal</label>
+		<label index="SOM">Somalia</label>
+		<label index="SUR">Suriname</label>
+		<label index="STP">Sao-Tome und Principe</label>
+		<label index="SLV">El Salvador</label>
+		<label index="SYR">Syrien</label>
+		<label index="SWZ">Swasiland</label>
+		<label index="TCA">Turks- und Caicosinseln</label>
+		<label index="TCD">Tschad</label>
+		<label index="ATF">Französische Südliche Territorien</label>
+		<label index="TGO">Togo</label>
+		<label index="THA">Thailand</label>
+		<label index="TJK">Tadschikistan</label>
+		<label index="TKL">Tokelau</label>
+		<label index="TKM">Turkmenistan</label>
+		<label index="TUN">Tunesien</label>
+		<label index="TON">Tonga</label>
+		<label index="TLS">Osttimor</label>
+		<label index="TUR">Türkei</label>
+		<label index="TTO">Trinidad und Tobago</label>
+		<label index="TUV">Tuvalu</label>
+		<label index="TWN">Taiwan</label>
+		<label index="TZA">Tansania</label>
+		<label index="UKR">Ukraine</label>
+		<label index="UGA">Uganda</label>
+		<label index="USA">Vereinigte Staaten</label>
+		<label index="URY">Uruguay</label>
+		<label index="UZB">Usbekistan</label>
+		<label index="VAT">Vatikanstadt</label>
+		<label index="VCT">St. Vincent und die Grenadinen</label>
+		<label index="VEN">Venezuela</label>
+		<label index="VGB">Britische Jungferninseln</label>
+		<label index="VIR">Amerikanische Jungferninseln</label>
+		<label index="VNM">Vietnam</label>
+		<label index="VUT">Vanuatu</label>
+		<label index="WLF">Wallis und Futuna</label>
+		<label index="WSM">Samoa</label>
+		<label index="YEM">Jemen</label>
+		<label index="MYT">Mayotte</label>
+		<label index="ZAF">Süd-Afrika</label>
+		<label index="ZMB">Sambia</label>
+		<label index="ZWE">Simbabwe</label>
+		<label index="PSE">Palästinensische Territorien</label>
+		<label index="SCG">Serbien und Montenegro</label>
+		<label index="HMD">Heard und McDonaldinseln</label>
+	</labels>
 </locallang>
