--- a/core/locale/static_country.xml
+++ b/core/locale/static_country.xml
@@ -1031,131 +1031,131 @@
 		<label index="ETH">Етиопија</label>
 		<label index="FIN">финска</label>
 		<label index="FJI">Фиџи</label>
-		<label index="FLK">Falklandinseln</label>
-		<label index="FSM">Mikronesien</label>
-		<label index="FRO">Faröische Inseln</label>
-		<label index="FRA">Frankreich</label>
-		<label index="GAB">Gabun</label>
-		<label index="GBR">Vereinigtes Königreich Großbritannien und Irland</label>
-		<label index="GRD">Grenada</label>
-		<label index="GEO">Georgien</label>
-		<label index="GUF">Französusch Guyana</label>
-		<label index="GHA">Ghana</label>
-		<label index="GIB">Gibraltar</label>
-		<label index="GRL">Grönland</label>
-		<label index="GMB">Gambia</label>
-		<label index="GIN">Guinea</label>
-		<label index="GLP">Guadeloupe</label>
-		<label index="GNQ">Äquatoriales Guinea</label>
-		<label index="GRC">Griechenland</label>
-		<label index="SGS">Südgeorgien und die Südlichen Sandwichinseln</label>
-		<label index="GTM">Guatemala</label>
-		<label index="GUM">Guam</label>
-		<label index="GNB">Guinea-Bissau</label>
-		<label index="GUY">Guyana</label>
-		<label index="HKG">Hong Kong S.A.R., China</label>
-		<label index="HND">Honduras</label>
-		<label index="HRV">Kroatien</label>
-		<label index="HTI">Haiti</label>
-		<label index="HUN">Ungarn</label>
-		<label index="IDN">Indonesien</label>
-		<label index="IRL">Irland</label>
-		<label index="ISR">Israel</label>
-		<label index="IND">Indien</label>
-		<label index="IOT">Britisches Territorium im Indischen Ozean</label>
-		<label index="IRQ">Irak</label>
-		<label index="IRN">Iran</label>
-		<label index="ISL">Island</label>
-		<label index="ITA">Italien</label>
-		<label index="JAM">Jamaika</label>
-		<label index="JOR">Jordanien</label>
-		<label index="JPN">Japan</label>
-		<label index="KEN">Kenia</label>
-		<label index="KGZ">Kirgisistan</label>
-		<label index="KHM">Kambodscha</label>
-		<label index="KIR">Kiribati</label>
-		<label index="COM">Komoren</label>
-		<label index="KNA">St. Kitts und Nevis</label>
-		<label index="PRK">Demokratische Volksrepublik Korea</label>
-		<label index="KOR">Republik Korea</label>
-		<label index="KWT">Kuwait</label>
-		<label index="CYM">Kaimaninseln</label>
-		<label index="KAZ">Kasachstan</label>
-		<label index="LAO">Laos</label>
-		<label index="LBN">Libanon</label>
-		<label index="LCA">St. Lucia</label>
-		<label index="LIE">Liechtenstein</label>
-		<label index="LKA">Sri Lanka</label>
-		<label index="LBR">Liberia</label>
-		<label index="LSO">Lesotho</label>
-		<label index="LTU">Litauen</label>
-		<label index="LUX">Luxemburg</label>
-		<label index="LVA">Lettland</label>
-		<label index="LBY">Libyen</label>
-		<label index="MAR">Marokko</label>
-		<label index="MCO">Monaco</label>
-		<label index="MDA">Republik Moldau</label>
-		<label index="MDG">Madagaskar</label>
-		<label index="MHL">Marshallinseln</label>
-		<label index="MKD">Mazedonien</label>
-		<label index="MLI">Mali</label>
-		<label index="MMR">Myanmar</label>
-		<label index="MNG">Mongolei</label>
-		<label index="MAC">Macau S.A.R., China</label>
-		<label index="MNP">Nördliche Marianen Inseln</label>
-		<label index="MTQ">Martinique</label>
-		<label index="MRT">Mauretanien</label>
-		<label index="MSR">Montserrat</label>
-		<label index="MLT">Malta</label>
-		<label index="MUS">Mauritius</label>
-		<label index="MDV">Malediven</label>
-		<label index="MWI">Malawi</label>
-		<label index="MEX">Mexiko</label>
-		<label index="MYS">Malaysia</label>
-		<label index="MOZ">Mosambik</label>
-		<label index="NAM">Namibia</label>
-		<label index="NCL">Neukaledonien</label>
-		<label index="NER">Niger</label>
-		<label index="NFK">Norfolkinsel</label>
-		<label index="NGA">Nigeria</label>
-		<label index="NIC">Nicaragua</label>
-		<label index="NLD">Niederlande</label>
-		<label index="NOR">Norwegen</label>
-		<label index="NPL">Nepal</label>
-		<label index="NRU">Nauru</label>
-		<label index="NIU">Niue</label>
-		<label index="NZL">Neuseeland</label>
-		<label index="OMN">Oman</label>
-		<label index="PAN">Panama</label>
-		<label index="PER">Peru</label>
-		<label index="PYF">Französisch Polynesien</label>
-		<label index="PNG">Papua-Neuguinea</label>
-		<label index="PHL">Philippinen</label>
-		<label index="PAK">Pakistan</label>
-		<label index="POL">Polen</label>
-		<label index="SPM">St. Pierre und Miquelon</label>
-		<label index="PCN">Pitcairn</label>
-		<label index="PRI">Puerto Rico</label>
-		<label index="PRT">Portugal</label>
-		<label index="PLW">Palau</label>
-		<label index="PRY">Paraguay</label>
-		<label index="QAT">Katar</label>
-		<label index="REU">Saint-Dennis</label>
-		<label index="ROM">Rumänien</label>
-		<label index="RUS">Russische Föderartion</label>
-		<label index="RWA">Ruanda</label>
-		<label index="SAU">Saudi-Arabien</label>
-		<label index="SLB">Salomonen</label>
-		<label index="SYC">Seychellen</label>
-		<label index="SDN">Sudan</label>
-		<label index="SWE">Schweden</label>
-		<label index="SGP">Singapur</label>
-		<label index="SHN">St. Helena</label>
-		<label index="SVN">Slowenien</label>
-		<label index="SJM">Svalbard und Jan Mayen</label>
-		<label index="SVK">Slowakei</label>
-		<label index="SLE">Sierra Leone</label>
-		<label index="SMR">San Marino</label>
+		<label index="FLK">Фокландска острва</label>
+		<label index="FSM">Микронезија</label>
+		<label index="FRO">Фарска острва</label>
+		<label index="FRA">Француска</label>
+		<label index="GAB">Габон</label>
+		<label index="GBR">Уједињено Краљевство Велике Британије и Северне Ирске</label>
+		<label index="GRD">Гренада</label>
+		<label index="GEO">Грузија</label>
+		<label index="GUF">Француска Гвајана</label>
+		<label index="GHA">Гана</label>
+		<label index="GIB">Гибралтар</label>
+		<label index="GRL">Гренланд</label>
+		<label index="GMB">Гамбија</label>
+		<label index="GIN">Гвинеја</label>
+		<label index="GLP">Гваделуп</label>
+		<label index="GNQ">Екваторијална Гвинеја</label>
+		<label index="GRC">Грчка</label>
+		<label index="SGS">Јужна Џорџија и Јужна Сендвичка Острва</label>
+		<label index="GTM">Гватемала</label>
+		<label index="GUM">Гуам</label>
+		<label index="GNB">Гвинеја Бисао</label>
+		<label index="GUY">Гвајана</label>
+		<label index="HKG">Хонг Конг специјална административна регија НР Кине</label>
+		<label index="HND">Хондурас</label>
+		<label index="HRV">Хрватска</label>
+		<label index="HTI">Хаити</label>
+		<label index="HUN">Мађарска</label>
+		<label index="IDN">Индонезија</label>
+		<label index="IRL">Ирска</label>
+		<label index="ISR">Израел</label>
+		<label index="IND">Индија</label>
+		<label index="IOT">Британска  територија Индијског океана</label>
+		<label index="IRQ">Ирак</label>
+		<label index="IRN">Иран</label>
+		<label index="ISL">Исланд</label>
+		<label index="ITA">Италија</label>
+		<label index="JAM">Јамајка</label>
+		<label index="JOR">Јордна</label>
+		<label index="JPN">Јапан</label>
+		<label index="KEN">Кенија</label>
+		<label index="KGZ">Киргистан</label>
+		<label index="KHM">Камбоџа</label>
+		<label index="KIR">Кирибати</label>
+		<label index="COM">Комори</label>
+		<label index="KNA">Сент Китс и Невис</label>
+		<label index="PRK">Демократска Народна Република Кореја</label>
+		<label index="KOR">Северна Кореја</label>
+		<label index="KWT">Кувајт</label>
+		<label index="CYM">Кајманска острва</label>
+		<label index="KAZ">Казахстан</label>
+		<label index="LAO">Лаос</label>
+		<label index="LBN">Либан</label>
+		<label index="LCA">Света Луција</label>
+		<label index="LIE">Лихтенштајн</label>
+		<label index="LKA">Шри Ланка</label>
+		<label index="LBR">Либерија</label>
+		<label index="LSO">Лесото</label>
+		<label index="LTU">Литванија</label>
+		<label index="LUX">Луксембург</label>
+		<label index="LVA">Летонија</label>
+		<label index="LBY">Либија</label>
+		<label index="MAR">Мароко</label>
+		<label index="MCO">Монако</label>
+		<label index="MDA">Република Молдавија</label>
+		<label index="MDG">Мадагаскар</label>
+		<label index="MHL">Маршалска Острва</label>
+		<label index="MKD">Македонија</label>
+		<label index="MLI">Мали</label>
+		<label index="MMR">Мјанмар</label>
+		<label index="MNG">Монголија</label>
+		<label index="MAC">Макао специјална административна регија НР Кине</label>
+		<label index="MNP">Северна Маријанска острва</label>
+		<label index="MTQ">Мартиник</label>
+		<label index="MRT">Мауританија</label>
+		<label index="MSR">Монтсерат</label>
+		<label index="MLT">Малта</label>
+		<label index="MUS">Маурицијус</label>
+		<label index="MDV">Малдиви</label>
+		<label index="MWI">Малави</label>
+		<label index="MEX">Мексико</label>
+		<label index="MYS">Малезија</label>
+		<label index="MOZ">Мозамбик</label>
+		<label index="NAM">Намибија</label>
+		<label index="NCL">Нова Каледонија</label>
+		<label index="NER">Нигер</label>
+		<label index="NFK">Острво Норфок</label>
+		<label index="NGA">Нигерија</label>
+		<label index="NIC">Никарагва</label>
+		<label index="NLD">Холандија</label>
+		<label index="NOR">Норвешка</label>
+		<label index="NPL">Непал</label>
+		<label index="NRU">Науру</label>
+		<label index="NIU">Нијуе</label>
+		<label index="NZL">Нови Зеланд</label>
+		<label index="OMN">Оман</label>
+		<label index="PAN">Панама</label>
+		<label index="PER">Перу</label>
+		<label index="PYF">Француска  Полинезија</label>
+		<label index="PNG">Папуа Нова Гвинеја</label>
+		<label index="PHL">Филипини</label>
+		<label index="POL">Пољска</label>
+ф		<label index="PAK">Пакистан</label>
+		<label index="SPM">Свети Пјер и Микелон</label>
+		<label index="PCN">Острва Питкерн</label>
+		<label index="PRI">Порторико</label>
+		<label index="PRT">Португал</label>
+		<label index="PLW">Палау</label>
+		<label index="PRY">Парагвај</label>
+		<label index="QAT">Катар</label>
+		<label index="REU">Сен Дени</label>
+		<label index="ROM">Румунија</label>
+		<label index="RUS">Руска Федерација</label>
+		<label index="RWA">Руанда</label>
+		<label index="SAU">Саудијска Арабија</label>
+		<label index="SLB">Соломон</label>
+		<label index="SYC">Сејшели</label>
+		<label index="SDN">Судан</label>
+		<label index="SWE">Шведска</label>
+		<label index="SGP">Сингапур</label>
+		<label index="SHN">Света Јелена</label>
+		<label index="SVN">Словенија</label>
+		<label index="SJM">Свалбард и Јан Мајен</label>
+		<label index="SVK">Словачка</label>
+		<label index="SLE">Сијера Леоне</label>
+		<label index="SMR">Сан Марино</label>
 		<label index="SEN">Senegal</label>
 		<label index="SOM">Somalia</label>
 		<label index="SUR">Suriname</label>
