--- a/core/locale/file.xml
+++ b/core/locale/file.xml
@@ -80,4 +80,14 @@
 		<label index="filename">Име фајл-а</label>
 		<label index="filesize">Величина фајл-а </label>
 	</labels>
+	<labels lang="ja_JP">
+		<label index="download">ダウンロード</label>
+		<label index="upload">アップロード</label>
+		<label index="size.gb">GB</label>
+		<label index="size.mb">MB</label>
+		<label index="size.kb">KB</label>
+		<label index="size.b">B</label>
+		<label index="filename">ファイル名</label>
+		<label index="filesize">ファイルサイズ</label>
+	</labels>
 </locallang>
