* minor fixes to currencies locale XML

--- a/core/locale/static_currency.xml
+++ b/core/locale/static_currency.xml
@@ -337,7 +337,7 @@
 		<label index="AMD">Armenischer Dram</label>
 		<label index="AWG">Aruba-Florin</label>
 		<label index="AUD">Australischer Dollar</label>
-		<label index="AZN">Neuer Aserbaidschan-Manat
+		<label index="AZN">Neuer Aserbaidschan-Manat</label>
 		<label index="BSD">Bahama Dollar</label>
 		<label index="BHD">Bahrain Dinar</label>
 		<label index="BDT">Bengalische Taka</label>
@@ -402,7 +402,7 @@
 		<label index="IQD">Irakischer Dinar</label>
 		<label index="ILS">Neuer Israelischer Schekel</label>
 		<label index="JMD">Jamaika-Dollar</label>
-		<label index="">Japanischer Yen</label>
+		<label index="JPY">Japanischer Yen</label>
 		<label index="JOD">Jordanischer Dinar</label>
 		<label index="KZT">Kasachischer Tenge</label>
 		<label index="KES">Kenia-Schilling</label>
@@ -491,6 +491,46 @@
 		<label index="YER">Jemen-Rial</label>
 		<label index="ZMK">Sambischer Kwacha</label>
 		<label index="ZWD">Zimbabwe-Dollar</label>
+	</labels>
+	<labels lang="fr_FR">
+		<label index="AED">Émirats arabes unis</label>
+		<label index="CHF">Franc suisse</label>
+		<label index="DEM">Deutsche Mark</label>
+		<label index="ESP">Peseta espagnole</label>
+		<label index="FIM">Mark finlandais</label>
+		<label index="FRF">Franc français</label>
+		<label index="HKD">Dollar de Hong Kong</label>
+		<label index="HUF">Forint hongrois</label>
+		<label index="IEP">Livre irlandaise</label>
+		<label index="IDR">Rupiah Indonésie</label>
+		<label index="ILS">Nouveau Shekel israélien</label>
+		<label index="INR">Roupie indienne</label>
+		<label index="IRR">Rial iranien</label>
+		<label index="ISK">Couronne islandaise</label>
+		<label index="ITL">Lire italienne</label>
+		<label index="JPY">Yen japonais</label>
+		<label index="KRW">Won nord-coréen</label>
+		<label index="LVL">Lats letton</label>
+		<label index="MXN">Peso mexicain</label>
+		<label index="MYR">Ringgit malais</label>
+		<label index="NGN">Naira nigérian</label>
+		<label index="NOK">Couronne norvégienne</label>
+		<label index="NZD">Nouvelle-Zélande Dollar</label>
+		<label index="PHP">Peso philippin</label>
+		<label index="PKR">Roupie pakistanaise</label>
+		<label index="PLN">Zloty polonais</label>
+		<label index="QAR">Rial qatari</label>
+		<label index="RON">Leu roumain</label>
+		<label index="RUB">Rouble russe</label>
+		<label index="SAR">Rial saoudien</label>
+		<label index="SGD">Dollar de Singapour</label>
+		<label index="LKR">Roupie srilankaise</label>
+		<label index="SEK">Couronne suédoise</label>
+		<label index="NTD">Taiwan Dollar</label>
+		<label index="THB">Baht thaïlandais</label>
+		<label index="TRY">Nouvelle livre turque</label>
+		<label index="UAH">Hryvnia ukrainienne</label>
+		<label index="ZAR">Rand sud-africain</label>
 	</labels>
 	<labels lang="cs_CZ">
 		<label index="CZK">česká koruna</label>
